Remove BETA from Bisq2 link

--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -40,7 +40,7 @@
 <!--        <a class="nav-link" href="{% lingual_link dao %}">{{ mainNavLabels.bisqDAO }}</a>-->
 <!--      </li>-->
       <li class="nav-item">
-        <a class="nav-link" href="/bisq-2">Bisq 2 <sup class="green">BETA</sup></a>
+        <a class="nav-link" href="/bisq-2">Bisq 2</a>
       </li>
       <li class="nav-item {% is_current_page faq %}">
         <a class="nav-link" target="_blank" href="https://bisq.wiki/Frequently_asked_questions">{{ mainNavLabels.faq }}<img class="external-link-symbol" src="/images/external-link-b.svg"></a>
